# writeas-gtk

./: .gitignore  .gitmodules  .travis.yml  README.md  USER_GUIDE.md  build-cli.sh  meson.build  meson_options.txt
data/: com.abunchtell.WriteAsDesktop.appdata.xml.in  com.abunchtell.WriteAsDesktop.desktop.in  com.github.writeas.writeas-gtk.appdata.xml  com.github.writeas.writeas-gtk.appdata.xml.in  com.github.writeas.writeas-gtk.desktop  meson.build  write-as-gtk.appdata.xml  write-as-gtk.desktop  writeas-gtk.appdata.xml  writeas-gtk.appdata.xml.in  writeas-gtk.desktop  writeas-gtk.desktop.in
debian/: changelog  control  copyright  rules
flatpak/: com.abunchtell.WriteAsDesktop.json
meson/: build-cli.sh  post_install.py
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.writeas.writeas-gtk.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+157 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+157 more)
src/: Application.vala  Window.vala  application.vala  meson.build  window.vala
src/Granite/: Accels.vala  ModeSwitch.vala
src/Widgets/: ModeSwitch.vala
